@@ -104,18 +104,21 @@ export srcdir
 
 case $1 in
   *.ipynb)
-    PYTHONPATH=$pypath DYLD_LIBRARY_PATH=$modpath:$DYLD_LIBRARY_PATH \
+    PYTHONPATH=$pypath:$PYTHONPATH \
+    DYLD_LIBRARY_PATH=$modpath:$DYLD_LIBRARY_PATH \
     PYTHONIOENCODING=utf-8:surrogateescape \
     exec $PREFIXCMD @PYTHON@ @abs_srcdir@/python/ipnbdoctest.py "$@";;
   *.py)
-    PYTHONPATH=$pypath DYLD_LIBRARY_PATH=$modpath:$DYLD_LIBRARY_PATH \
+    PYTHONPATH=$pypath:$PYTHONPATH \
+    DYLD_LIBRARY_PATH=$modpath:$DYLD_LIBRARY_PATH \
     exec $PREFIXCMD @PYTHON@ "$@";;
   *.test)
     exec sh -x "$@";;
   *.pl)
     exec $PERL "$@";;
   *python*|*jupyter*|*pypy*)
-    PYTHONPATH=$pypath DYLD_LIBRARY_PATH=$modpath:$DYLD_LIBRARY_PATH \
+    PYTHONPATH=$pypath:$PYTHONPATH \
+    DYLD_LIBRARY_PATH=$modpath:$DYLD_LIBRARY_PATH \
     exec $PREFIXCMD "$@";;
   *)
     echo "Unknown extension" >&2
